// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2023";

package com.google.android.as.oss.delegatedui.api.infra.dataservice;

import "src/com/google/android/as/oss/delegatedui/api/common/common.proto";
import "src/com/google/android/as/oss/delegatedui/api/integration/templates/template_integration.proto";

option java_package = "com.google.android.as.oss.delegatedui.api.infra.dataservice";
option java_multiple_files = true;

// Get the delegated ui template data for the given ingress data
message DelegatedUiGetTemplateDataRequest {
  // Configuration from the local Context. Used to construct a remote Context.
  // This will be sent through RPC metadata headers, and is only documented here
  // for the record.
  // android.content.res.Configuration configuration = 0;

  // UUID of the active delegated UI session.
  string session_uuid = 1;

  common.DelegatedUiClientId client_id = 2;
  // Ingress data used to generate the delegated ui data.
  common.DelegatedUiIngressData client_ingress_data = 3;

  // A list of templates supported by the renderer.
  repeated integration.templates.DelegatedUiTemplateType supported_templates =
      4;

  // The android.view.View.MeasureSpec of the delegated UI that the client's
  // local UI can support - for the RemoteViews template use case.
  int32 measure_spec_width = 5;
  int32 measure_spec_height = 6;
}

message DelegatedUiGetTemplateDataResponse {
  // The template to use for the delegated UI content.
  integration.templates.DelegatedUiTemplateType template_type = 1;

  // The data to use to populate the template.
  integration.templates.DelegatedUiTemplateData template_data = 2
     ;

  // Whether there is additional data available for a follow-up
  // GetDelegatedUiAdditionalData call.
  bool has_additional_data = 3;

  // The title to set on the delegated UI pane / window, for a11y.
  CommonTemplateData common_data = 4;
}

message CommonTemplateData {
  // The title to set on the delegated UI pane / window, for a11y.
  string accessibility_pane_title = 1;
}
