// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2023";

package com.google.android.as.oss.feedback.api;

option java_package = "com.google.android.as.oss.feedback.api";
option java_multiple_files = true;

// Represents a feedback chip.
message FeedbackTagData {
  // The label of the tag.
  string label = 1;
  // The rating tag enum referenced by rating_tag_ordinal.
  FeedbackRatingTagSource rating_tag_source = 2;
  // The rating tag ordinal of the enum specified by rating_tag_source.
  int32 rating_tag_ordinal = 3;
}

// The source enum of the rating tag.
enum FeedbackRatingTagSource {
  RATING_TAG_SOURCE_UNDEFINED = 0;
  RATING_TAG_SOURCE_POSITIVE_RATING_TAG = 1;
  RATING_TAG_SOURCE_NEGATIVE_RATING_TAG = 2;
  RATING_TAG_SOURCE_KEY_TYPE_OPTION_TAG = 3;
}

// The sentiment of a feedback rating.
enum FeedbackRatingSentiment {
  RATING_SENTIMENT_UNDEFINED = 0;
  RATING_SENTIMENT_THUMBS_UP = 1;
  RATING_SENTIMENT_THUMBS_DOWN = 2;
}
