// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2023";

package com.google.android.as.oss.feedback.api.gateway;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.google.android.as.oss.feedback.api.gateway";

enum QuartzCUJ {
  QUARTZ_CUJ_UNSPECIFIED = 0;
  QUARTZ_CUJ_KEY_TYPE = 1;
  QUARTZ_CUJ_KEY_SUMMARIZATION = 2;
}

message QuartzCommonData {
  // Replicates the ChannelImportance enum in
  // frameworks/base/core/java/android/app/NotificationManager.java
  enum ChannelImportance {
    CHANNEL_IMPORTANCE_UNSPECIFIED = 0;
    CHANNEL_IMPORTANCE_NONE = 1;
    CHANNEL_IMPORTANCE_MIN = 2;
    CHANNEL_IMPORTANCE_LOW = 3;
    CHANNEL_IMPORTANCE_DEFAULT = 4;
    CHANNEL_IMPORTANCE_HIGH = 5;
    CHANNEL_IMPORTANCE_MAX = 6;
  }

  // sbn_key is the Android system-generated sbnKey, derived from
  // StatusBarNotification metadata (package name, tag, id)
  string sbn_key = 1;
  string uuid = 2;
  string asi_version = 3;
  string package_name = 4;
  string title = 5;
  string content = 6;
  string notification_category = 7;
  string notification_tag = 8;
  bool is_conversation = 9;
  string channel_id = 10;
  string channel_name = 11;
  ChannelImportance channel_importance = 12;
  string channel_description = 13;
  string channel_conversation_id = 14;
  string play_store_category = 15;
  string extra_title = 16;
  string extra_title_big = 17;
  string extra_text = 18;
  string extra_text_lines = 19;
  string extra_summary_text = 20;
  string extra_people_list = 21;
  string extra_messaging_person = 22;
  string extra_messages = 23;
  repeated string extra_historic_messages = 24;
  string extra_conversation_title = 25;
  string extra_big_text = 26;
  string extra_info_text = 27;
  string extra_sub_text = 28;
  bool extra_is_group_conversation = 29;
  string extra_picture_content_description = 30;
  string extra_template = 31;
  bool extra_show_big_picture_when_collapsed = 32;
  bool extra_colorized = 33;
  repeated string extra_remote_input_history = 34;
  string locus_id = 35;
  bool has_promotable_characteristics = 36;
  string group_key = 37;
}

message QuartzKeyTypeData {
  enum ClassificationMethod {
    CLASSIFICATION_METHOD_UNKNOWN = 0;
    CLASSIFICATION_METHOD_PREDICT_APP_PROVIDED = 1;
    CLASSIFICATION_METHOD_PREDICT_CLOSE_CONTACT_ACTION = 2;
    CLASSIFICATION_METHOD_PREDICT_CONTENT = 3;
    CLASSIFICATION_METHOD_PREDICT_RULES_CORRECTION = 4;
    CLASSIFICATION_METHOD_PREDICT_EXEMPTION_EXCLUDED_PACKAGE = 5;
    CLASSIFICATION_METHOD_PREDICT_EXEMPTION_GROUP_SUMMARY = 6;
    CLASSIFICATION_METHOD_PREDICT_EXEMPTION_UNSUPPORTED_NOTIFICATION_CATEGORY =
        7;
    CLASSIFICATION_METHOD_PREDICT_EXEMPTION_EMPTY_OR_UNPARSEABLE_NOTIFICATION =
        8;
    CLASSIFICATION_METHOD_PREDICT_EXEMPTION_SENDER_FROM_CONTACTS = 9;
    CLASSIFICATION_METHOD_PREDICT_EXEMPTION_UNSUPPORTED_LANGUAGE = 10;
    CLASSIFICATION_METHOD_PREDICT_DEFAULT_BUNDLE_CORRECTION = 11;
  }

  QuartzCommonData quartz_common_data = 1;
  string notification_id = 2;
  .google.protobuf.Timestamp post_timestamp = 3;
  string app_category = 4;
  repeated string model_info_list = 5;
  ClassificationMethod classification_method = 6;
  string classification_bert_category_result = 7;
  float classification_bert_category_score = 8;
  int64 classification_bert_category_executed_time_ms = 9;
  string classification_category = 10;
  bool is_threshold_changed_category = 11;
  int64 classification_executed_time_ms = 12;
  // A map containing the exemption method and execution time, will be
  // translated into a string to use in code.
  string exemption_executed_time_ms_string = 13;
  string feedback_category = 14;
  string feedback_input_category = 15;
}

message QuartzKeySummarizationData {
  QuartzCommonData quartz_common_data = 1;
  string feature_name = 2;
  string model_name = 3;
  string model_version = 4;
  bool is_group_conversation = 5;
  string conversation_title = 6;
  string messages = 7;
  int32 notification_count = 8;
  int64 execution_time_ms = 9;
  string summary_text = 10;
  string feedback_type = 11;
  string feedback_additional_detail = 12;
}

message QuartzDataDonation {
  QuartzKeyTypeData quartz_key_type_data = 1;
  QuartzKeySummarizationData quartz_key_summarization_data = 2;
}
